[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

Bucardo version 4.3.0

  - Add new column to customcode: trigrules. Defaults to false: if true, 
    we turn on triggers and rules for the duration of the custom code. [GSM]

  - For custom code exception handlers, make the 'dbi_error' hash key return 
    a flattened string of the actual exception thrown. [GSM]

  - Better upgrading of very old versions of Bucardo. [GSM]

Bucardo version 4.2.2, released October 2, 2009

  - Fix so that warning_file works properly again. [GSM]

Bucardo version 4.2.1, released October 1, 2009

  - Improve ability of 'bucardo_ctl upgrade' to work against older
    versions of Bucardo [GSM]

  - Changed the chunking threshold for pushdelta to 100,000 and 10,000 [GSM]

  - Make bucardo_ctl list table|sequence follow same wildcard rules as 
    other list nouns. [GSM]

  - Remove the old 'alter' verb from bucardo_ctl: use 'update' instead [GSM]

  - Fix a SQL error in 'bucardo_ctl status <sync> [GSM]

  - Remove the unused t/bucardo.test.data file [GSM]

Bucardo version 4.2.0, released September 30, 2009

  - Add the "delta_bypass" feature, which allows a pushdelta sync to switch 
    to 'fullcopy' mode on the fly, depending on the number of rows that 
    have changed. [GSM]

  - Fixed an error preventing customselect from working in certain situations. [GSM]

  - Have 'bucardo_ctl install' check for successful plperlu installation. [GSM]

  - Clean up and standardize all the bucardo_ctl list/add/remove actions. [GSM]

Bucardo version 4.1.2, released September 25, 2009

 - Fix sequence replication by setting is_called properly on the targets
   [GSM, thanks to Selena Deckelmann for discovering this]

 - Respect server_side_prepares db setting in validate_sync. Previously, 
   this function would fail if validating more than one table at a time 
   and the database was set as server_side_prepares off [GSM]
